Ensure focus outline is always visible

--- a/src/scss/base/_text.scss
+++ b/src/scss/base/_text.scss
@@ -91,4 +91,8 @@ a {
     &.active {
         color: var(--primary-contrast-alt);
     }
+
+    &:focus {
+        outline: 1px solid var(--primary-contrast-alt);
+    }
 }
